This file tracks dependencies like Tailwind

--- a/0x02-tailwind-css/package.json
+++ b/0x02-tailwind-css/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tailwindcss": "^4.1.11"
-  }
+  "license": "ISC"
 }
